# Dad_n_Me

./: .gitignore  CMakeLists.txt  Character.hpp  GameWidget.h  Models.h  README.md  Top_game.cpp  ViewModel.h  main.cpp
Common/: Animation.cpp  Animation.h  Background.cpp  Background.h  Boss.cpp  Boss.h  Common.cpp  Common.h  Player.cpp  Player.h  ResourceManager.cpp  ResourceManager.h  Simple.cpp  Simple.h
Doc_Star/Team/WC/C_Big/: CreatMap.c  CreatMap.h  ImageSupport.c  ImageSupport.h  Makefile.win  MusicSupport.c  MusicSupport.h  Readme.txt  graphics.dev  graphics.layout  main.c  out.txt  path.c  path.h  scene.c  scene.h
Doc_Star/Team/WC/C_Big/include/: extgraph.h  graphics.h  imgui.h  linkedlist.h
Doc_Star/Team/WC/C_Big/libgraphics/: graphics.c  imgui.c  linkedlist.c
Model/: Background.cpp  Background.h  Boss.cpp  Boss.h  Common.cpp  Common.h  Player.cpp  Player.h  Structure.h
ModelView/: GameViewModel.cpp  GameViewModel.h  GameWidget.cpp  GameWidget.h  ViewModel.cpp  ViewModel.h
View/: Animation.h  GameWidget.cpp  GameWidget.h  ResourceManager.h  View.cpp  View.h  View_draw.cpp  View_draw.h
ViewModel/: GameWidget.h  ViewModel.cpp  ViewModel.h
include/: Player.h
src/: Player.cpp
